--- a/experiment4/css/style.css
+++ b/experiment4/css/style.css
@@ -1,12 +1,20 @@
 /* style.css */
 
 /* Set the canvas element to be the full size of the window */
-html, body {
-    padding: 0;
-    margin: 0;
-  }
-  
-  canvas {
-    vertical-align: top;
-  }
+canvas {
+    width: 100%;
+    height: 100%;
+}
+
+/* Center the canvas element on the page */
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#canvas-container {
+    width: 800px;
+    height: 800px;
+}
   
